objects/Sales_Order_EQAI_Mapping__mdt/Sales_Order_EQAI_Mapping__mdt.object-meta.xml
<CustomObject>
    <description>Data Mapping of Sales Order Field Values to EQAI Field Values</description>
    <label>Sales Order EQAI Mapping</label>
    <pluralLabel>Sales Order EQAI Mapping</pluralLabel>
</CustomObject>