objects/Sales_Order_EQAI_Mapping__mdt/fields/EQAI_Field_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Field_Name__c</fullName>
    <label>EQAI Field Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>company_id</fullName>
                <default>true</default>
                <label>company_id</label>
            </value>
            <value>
                <fullName>profit_ctr_id</fullName>
            </value>
            <value>
                <fullName>project_code</fullName>
            </value>
            <value>
                <fullName>country_code</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>