objects/Sales_Order_EQAI_Mapping__mdt/fields/EQAI_Table_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Table_Name__c</fullName>
    <label>EQAI Table Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>WorkOrderQuoteHeader</fullName>
                <default>true</default>
                <label>WorkOrderQuoteHeader</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>