objects/Sales_Order_EQAI_Mapping__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>DeveloperName</columns>
    <columns>EQAI_Field_Name__c</columns>
    <columns>EQAI_Table_Name__c</columns>
    <columns>EQAI_Field_Value__c</columns>
    <columns>Salesforce_Field_Value__c</columns>
    <columns>Salesforce_Field_API_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
</ListView>